--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
+    <title>Lino's Portfolio</title>
   </head>
+  
   <body>
-    <p>Hello world</p>
+    <p>
+      <a href="https://twitter.com/alpha_linoren">りのれん</a>のポートフォリオやよ～
+    </p>
+      <p> まだ特になにもないやよ～～ </p>
   </body>
 </html>
