--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   
   <body>
     <h1>
-      <p>
-        <a href="https://twitter.com/alpha_linoren">りのれん</a>のポートフォリオやよ～
-      </p>
+      <p style="color:green"> ようこそ:P</p>
     </h1>
-      <p> まだ特になにもないやよ～～ </p>
+      <h2>
+        <p>
+          <a href="https://twitter.com/alpha_linoren">りのれん</a>のポートフォリオやよ～
+        </p>
+      </h2>
+    <p> まだ特になにもないやよ～～ </p>
   </body>
 </html>
