--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
     <title>Lino's Portfolio</title>
+    <style type = "text/css">
+      p{
+        color: lime;
+        background-color: black;
+      }
   </head>
   
   <body>
@@ -16,5 +21,15 @@
         </p>
       </h2>
     <p> まだ特になにもないやよ～～ </p>
+      <h3>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/alpha_linoren/">インスタ</a>
+          </li>
+          <li>
+            <a href="github.com/Lino-Ren">GitHub</a>
+          </li>
+        </ul>
+      <h3>
   </body>
 </html>
