--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style type = "text/css">
       p{
         color: lime;
+      }
+      body{
         background-color: black;
       }
      </style>
