--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <body>
     <h1>
-      <p style="color:green"> ようこそ:P</p>
+      <p style="color:#ff00ff"> ようこそ:P</p>
     </h1>
       <h2>
         <p>
