--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <body>
     <h1>
-      <p style="color:#ff00ff"> ようこそ:P</p>
+      <p style="color:#ff00ff"> HELLO~ :P</p>
     </h1>
       <h2>
         <p>
@@ -25,12 +25,13 @@
       </h2>
     <p> まだ特になにもないやよ～～ </p>
       <h3>
+        ↓リンク達
         <ul>
           <li>
             <a href="https://www.instagram.com/alpha_linoren/">インスタ</a>
           </li>
           <li>
-            <a href="github.com/Lino-Ren">GitHub</a>
+            <a href="https://github.com/Lino-Ren">GitHub</a>
           </li>
         </ul>
       <h3>
