--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
     <title>Lino's Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet" type = "text/css">
     <style type = "text/css">
       p{
         color: lime;
@@ -20,12 +21,12 @@
     </h1>
       <h2>
         <p>
-          <a href="https://twitter.com/alpha_linoren">りのれん</a>のポートフォリオやよ～
+          <a href="https://twitter.com/alpha_linoren">りのれん(@alpha_linoren)</a>のポートフォリオやよ～
         </p>
       </h2>
     <p> まだ特になにもないやよ～～ </p>
+    <p> ↓リンクくんたち </p>
       <h3>
-        ↓リンク達
         <ul>
           <li>
             <a href="https://www.instagram.com/alpha_linoren/">インスタ</a>
