--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -47,19 +47,25 @@
       .mb3{
         margin-bottom: 3em;
       }
+      .back-line {
+	    border-width: 3px 0 0 0;
+	    border-style: double;
+	    border-color: #ffffff;
+      }
      </style>
   </head>
 
   <body>
     <h1 style = "color:#ff00ff"> HELLO~:D </h1>
     <h2>
-      <p class = "mb3"> Welcome to LinoRen's portfolio </p>
+      <p> Welcome to LinoRen's portfolio </p>
     </h2>
+    <hr class="back-line mb3" />
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
-      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren/"> instagram </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren"> instagram </a>
       <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren"> GitHub </a>
     </h3>
   </body>
