--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <style type = "text/css">
       p{
-        color: lime;
+        color: #00ff00;
       }
       a{
-        color:#00ffff;
+        color: #00ffff;
         text-decoration: none;
       }
       *{
@@ -18,7 +18,7 @@
         line-height: 200%;
       }
       body{
-        background-color: black;
+        background-color: #000000;
         font-family: 'DotGothic16', sans-serif;
       }
       .link-character{
