背景色いじった

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         line-height: 200%;
       }
       body{
-        background-color: #0000;
+        background-color: black;
         font-family: 'DotGothic16', sans-serif;
       }
       .link-character{
