リンク別タブで開くようにした

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
-      <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
-      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren"> instagram </a>
-      <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren"> GitHub </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren" target = "_blank"> Twitter </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren" target = "_blank"> instagram </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren" target = "_blank"> GitHub </a>
     </h3>
   </body>
 </html>
