--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
 
   <body>
-    <h1 style = "color:#ff00ff"> HELLO~:D </h1>
+    <h1 style = "color:#ff00ff"> Hi,There </h1>
     <h2>
       <p> Welcome to LinoRen's portfolio </p>
     </h2>
