--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
     <title>Lino's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
     <style type = "text/css">
       p{
         color: lime;
@@ -19,7 +19,7 @@
       }
       body{
         background-color: black;
-        font-family: 'DotGothic16', sans-serif;
+        font-family: 'Titillium Web', sans-serif;
       }
       .link-character{
         font-weight:200;
@@ -59,9 +59,9 @@
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
-      <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren" target = "_blank"> Twitter </a>
-      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren" target = "_blank"> instagram </a>
-      <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren" target = "_blank"> GitHub </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren"> instagram </a>
+      <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren"> GitHub </a>
     </h3>
   </body>
 </html>
