らんぐじゃしていんでんとついか

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
@@ -9,21 +9,26 @@
       p{
         color: lime;
       }
+
       a{
         color:#00ffff;
         text-decoration: none;
       }
+
       *{
         text-align: center;
         line-height: 200%;
       }
+
       body{
         background-color: black;
         font-family: 'Titillium Web', sans-serif;
       }
+
       .link-character{
         font-weight:200;
       }
+
       .hvr-grow-rotate {
         display: inline-block;
         border-style: solid;
@@ -38,12 +43,14 @@
         -webkit-transition-property: transform;
         transition-property: transform;
       }
+
       .hvr-grow-rotate:hover,
       .hvr-grow-rotate:focus,
       .hvr-grow-rotate:active {
-      -webkit-transform: scale(1.1) rotate(4deg);
-      transform: scale(1.1) rotate(4deg);
+        -webkit-transform: scale(1.1) rotate(4deg);
+        transform: scale(1.1) rotate(4deg);
       }
+
       .mb3{
         margin-bottom: 3em;
       }
