--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="description" content="りのれんのポートフォリオ的なアレ 特に何もない">
     <title>Lino's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
     <style type = "text/css">
+      html{
+        font-size: 125%
+      }
+
       p{
         color: lime;
       }
@@ -54,6 +58,7 @@
       .mb3{
         margin-bottom: 3em;
       }
+
      </style>
   </head>
 
