ボタン追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h2>
     <hr>
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
-    <div class="box" ><p>MENU</p></div>
+    <a class = "menu_button" href = "#">MENU</a>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
