--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
       <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren"> instagram </a>
       <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren"> GitHub </a>
+      <p class = "circle"></p>
     </h3>
   </body>
 </html>
+
