add loading screen

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Lino's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="load.js"></script>
   </head>
 
   <body>
+    <div id = "loading-wrap">
+      <div class = "loader"></div>
+    </div>
+
     <h1 style = "color:#ff00ff"> Hi,There </h1>
     <h2>
       <p> Welcome to LinoRen's portfolio </p>
@@ -21,8 +26,8 @@
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
       <a class = "hvr-grow-rotate link-character"  href = "https://www.instagram.com/alpha_linoren"> instagram </a>
       <a class = "hvr-grow-rotate link-character"  href = "https://github.com/Lino-Ren"> GitHub </a>
+
       <p class = "circle"></p>
     </h3>
   </body>
 </html>
-
