コードファイル見ないで

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+/*そこのお前 ここにはウンコードしかないので見るんじゃあない*/
 <!DOCTYPE html>
 <html>
   <head>
@@ -20,7 +21,7 @@
     </h2>
     <hr>
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
-    <a class = "menu_button" href = "#">MENU</a>
+    <a class = "menu_button" href = "http://book.saizeriya.co.jp/menu2207_j/book/">MENU</a>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
