--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </h2>
     <hr>
     <p class = "mb3" style = "color: #cc00cc;"> Details are not yet available... </p>
-    <a class = "menu_button" href = "http://book.saizeriya.co.jp/menu2207_j/book/">MENU</a>
+    <a class = "menu_button" href = "https://www.mos.jp/menu/">MENU</a>
     <h3>
       <p style = "color: #00ffff;">Contact</p>
       <a class = "hvr-grow-rotate link-character"  href = "https://twitter.com/alpha_linoren"> Twitter </a>
